<resources>
    <string name="app_name">BMI</string>
    <string name="BMI_Title">BMI Application</string>
    <string name="idStrWhatBMI">BMI คืออะไร?</string>
    <string name="idStrCheckBMI">คำนวนน้ำหนัก BMI</string>
    <string name="idStrFoodForHeakth">"ร้านอาหารเพื่อสุขภาพ"</string>
    <string name="idStrWeight">Weight</string>
    <string name="idStrHeight">Height</string>
    <string name="idStrDetailBMI">
      Body Mass Index หรือ BMI คือ ค่าความหนาของร่างกาย ใช้เป็นมาตรฐานในการประเมินภาวะอ้วนหรือผอมในผู้ใหญ่ตั้งแต่อายุ 20 ปีขึ้นไป ซึ่งคำณวนได้จาก การใช้น้ำหนักตัวเป็นกิโลกรัมและหารด้วยส่วนสูงที่วัดเป็นเมตรยกกำลังสอง ซึ่งใช้ได้ทั้งผู้หญิงและผู้ชาย ดังสูตรต่อไปนี้
        \n\n
        สูตรคำนวณหาดัชนีมวลกาย
        \n\n
ดัชนีมวลกาย (BMI) = น้ำหนักตัว (กิโลกรัม) /
                      ส่วนสูง (เมตร)2 \n\n
ยกตัวอย่าง เช่น ถ้าคุณมีน้ำหนัก 60 กิโลกรัม และสูง 155 ซม. \n\n
ดัชนีมวลกาย (BMI) =     60 /
                       (1.55)*2 \n\n
ดัชนีมวลกาย (BMI) = 25.39 \n\n
   จากตัวอย่างข้างต้น BMI 25.39  สำหรับคนไทย (ชาวเอเชีย)  ก็จะอยู่ในช่วงของ 25.00 - 29.99  ซึ่งจัดได้ว่าเข้าข่ายอ้วนแล้ว  สำหรับตารางดัชนีมวลกายนี้สาเหตุที่จำเป็นต้องแยกระหว่างชาวอเมริกัน ยุโรป แอฟริกัน และชาวเอเชีย เนื่องจากคนเอเชียจะมีรูปร่างสรีระที่เล็กกว่าชาวอเมริกัน ยุโรป และแอฟริกันมาก จึงจำเป็นต้องปรับช่วงของดัชนีมวลกายให้ตรงกับโครงสร้างร่างกายของคนเอเชียเพื่อความถูกต้อง
   จากข้อมูลดัชนีมวลกายองค์การอนามัยโลกทำการศึกษาพบว่าคนเอเชียที่มีค่าดัชนีมวลกายมากกว่า 23 เป็นต้นไป  จะมีความเสี่ยงต่อโรคหลอดเลือดหัวใจเพิ่มขึ้นหรือแปลได้ว่าถ้าคุณน้ำหนักเกินก็มีโอกาสที่จะเป็นโรคหลอดเลือดหัวใจได้ง่ายขึ้นนั่นเอง
    \n\n
    \n\n
    </string>
    <string name="idStrTitleWhatBMI">What is BMI?</string>
    <string name="msgHeight">Your height is</string>
    <string name="msgWeight">Your weight is</string>
    <string name="msgBMI">Your BMI is</string>
    <string name="msgWiki">วิกิ BMI</string>
    <string name="msgArticle">บทความที่น่าสนใจ</string>
</resources>